name:                adjourn
version:             0.1.0.0
synopsis:            Shell interface to jrnl
description:         A command line viewer of jrnl's journal entries.
license:             BSD3
license-file:        LICENSE
author:              timds
maintainer:          timds_pub@icloud.com
copyright:           2017 timds
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files: example.txt

flag debug
  description: Enable debug logging
  default:     False

executable adjourn
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  if flag(debug)
    cpp-options:  -D__DEBUG__
  other-modules:       Adjourn.Parse, Adjourn.Debug
  build-depends:       attoparsec
                     , base >=4.6 && <5
                     , bytestring
                     , containers
                     , cryptocipher
                     , cryptohash
                     , hscurses >= 1.4
                     , mtl
                     , text
                     , time
