name:                adjourn
version:             0.1.0.0
synopsis:            Shell interface to jrnl
description:         A command line viewer of jrnl's journal entries.
license:             BSD3
license-file:        LICENSE
author:              timds
maintainer:          timds_pub@icloud.com
copyright:           2017 timds
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          example.txt

flag debug
  description: Enable debug logging
  default:     False

library
  hs-source-dirs:      src
  if flag(debug)
    cpp-options:  -D__DEBUG__
  exposed-modules:     Adjourn.Parse
                     , Adjourn.Debug
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers
                     , cryptocipher
                     , cryptohash
                     , mtl
                     , text
                     , time
                     , hscurses >= 1.4
  default-language:    Haskell2010

executable adj
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , text
                     , containers
                     , vector
                     , mtl
                     , brick
                     , vty
                     , adjourn
