name:                adjrn
version:             0.1.0.0
synopsis:            Terminal viewer of jrnl files
license:             BSD3
license-file:        LICENSE
author:              timds
maintainer:          timds_pub@icloud.com
copyright:           2017 timds
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          example.txt

library
  hs-source-dirs:      src
  exposed-modules:     Adjrn.Parse
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers
                     , cryptocipher
                     , cryptohash
                     , text
                     , time
  default-language:    Haskell2010

executable adjrn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , text
                     , containers
                     , vector
                     , mtl
                     , brick
                     , vty
                     , adjrn
