name:                adjrn
version:             0.1.0.0
synopsis:            Terminal viewer of jrnl files
license:             BSD3
license-file:        LICENSE
author:              timds
maintainer:          timds_pub@icloud.com
copyright:           2017 timds
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          tests/data/example.txt
                   , tests/data/example2.txt
                   , tests/data/example_pw123

library
  hs-source-dirs:      src
  exposed-modules:     Adjrn.Config
                     , Adjrn.Parse
  build-depends:       aeson
                     , attoparsec
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptocipher
                     , cryptohash
                     , directory
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010

executable adjrn
  hs-source-dirs:      app, app/Adjrn
  other-modules:       Adjrn
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , adjrn
                     , brick
                     , bytestring
                     , containers
                     , directory
                     , dlist
                     , either
                     , mtl
                     , text
                     , unordered-containers
                     , vector
                     , vty

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       Adjrn.ParseSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , QuickCheck
                     , adjrn
                     , attoparsec
                     , containers
                     , hspec
                     , hspec-attoparsec
                     , quickcheck-instances
                     , raw-strings-qq
                     , text
                     , time
